Add donate line

--- a/cmd/webserver/templates/donate.gohtml
+++ b/cmd/webserver/templates/donate.gohtml
@@ -106,6 +106,12 @@
                             <td></td>
                             <td><i class="fas fa-check text-success"></i></td>
                         </tr>
+                        <tr>
+                            <td nowrap="nowrap"><i class="fas fa-star text-warning"></i> Influence the Game DB roadmap</td>
+                            <td></td>
+                            <td></td>
+                            <td><i class="fas fa-check text-success"></i></td>
+                        </tr>
                         </tbody>
                     </table>
                 </div>
