--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -272,7 +272,7 @@
 
                                         {{ if ne .App.GetSteamPricesURL "" }}
                                             <tr>
-                                                <th scope="row">Steam Prices</th>
+                                                <th scope="row" style="width: 130px;">Steam Prices</th>
                                                 <td class="img">
                                                     <img src="https://pbs.twimg.com/profile_images/598791990084575232/KonQ1bk8_400x400.png" alt="Steam Prices">
                                                     <a href="https://steamprices.com/{{ .App.GetSteamPricesURL }}/{{ .App.ID }}/{{ slug .App.GetName }}" target="_blank">
