--- a/cmd/webserver/templates/info.gohtml
+++ b/cmd/webserver/templates/info.gohtml
@@ -52,7 +52,7 @@
 
                         <h5>Groups</h5>
                         <ul>
-                            <li>Groups are updated when a player in the group is updated, or when the group page is looked at. Limited to once every 3 hours.</li>
+                            <li>Groups are updated when a player in the group is updated, or when the group page is looked at. Limited to once per hour.</li>
                         </ul>
 
                         <h5>Packages</h5>
