--- a/cmd/webserver/assets/sass/_app.scss
+++ b/cmd/webserver/assets/sass/_app.scss
@@ -51,6 +51,15 @@
         img, video {
             width: 100%;
             margin-bottom: 1px;
+            float: left; // To fix white space
+        }
+
+        img:last-of-type, video:last-of-type {
+            margin-bottom: 0;
+        }
+
+        img + video {
+            @extend .mt-4;
         }
     }
 
