Add soundtrack link

--- a/cmd/webserver/templates/apps.gohtml
+++ b/cmd/webserver/templates/apps.gohtml
@@ -27,6 +27,7 @@
                         <a href="/apps?platforms=linux">Linux Games</a>,
                         <a href="/apps?developers=3589">Valve Games</a>,
                         <a href="/apps?tags=5153">Kickstarted Games</a>
+                        <a href="/apps?types=music">Soundtracks</a>
                     </small>
                 </div>
             </div>
