--- a/cmd/webserver/templates/chat_bot.gohtml
+++ b/cmd/webserver/templates/chat_bot.gohtml
@@ -46,6 +46,18 @@
 
                 {{ end }}
 
+                <h5>Recent Requests</h5>
+
+                <div id="chart"></div>
+
+                <div class="table-responsive">
+                    <table id="recent" class="table table-hover table-striped mb-0">
+                        <tbody>
+
+                        </tbody>
+                    </table>
+                </div>
+
             </div>
         </div>
 
