--- a/cmd/webserver/templates/chat_bot.gohtml
+++ b/cmd/webserver/templates/chat_bot.gohtml
@@ -5,10 +5,10 @@
 
         <div class="jumbotron">
             <a href="{{ .Link }}" target="_blank">
-                <img src="/assets/img/discord.png" class="float-right" alt="Discord">
+                <img src="/assets/img/discord.png" class="float-right" alt="Add chat bot to your server" title="Add chat bot to your server">
             </a>
-            <h1><i class="fas fa-robot"></i> Chat Bot <small>(BETA)</small></h1>
-            <p class="lead">Add Game DB to your Discord server by clicking the image to the right.</p>
+            <h1><i class="fas fa-robot"></i> Steam Chat Bot <small>(BETA)</small></h1>
+            <p class="lead"><a href="{{ .Link }}" target="_blank">Add the Steam Chat Bot to your Discord server</a>.</p>
             {{ if gt .Guilds 19 }}
                 <small>Used on {{ .Guilds }} servers so far.</small>
             {{ end }}
