--- a/cmd/webserver/templates/chat_bot.gohtml
+++ b/cmd/webserver/templates/chat_bot.gohtml
@@ -24,7 +24,7 @@
                     <h5>{{ (index $value 0).Type }} Commands </h5>
 
                     <div class="table-responsive mb-4">
-                        <table class="table table-hover table-striped table-datatable mb-3" data-ordering="false" id="bin-logs">
+                        <table class="table table-hover table-striped table-datatable mb-3" data-ordering="false">
                             <thead class="thead-light">
                             <tr>
                                 <th scope="col">Example</th>
