--- a/cmd/webserver/templates/chat_bot.gohtml
+++ b/cmd/webserver/templates/chat_bot.gohtml
@@ -37,7 +37,7 @@
                                 <tr>
                                     <td class="nowrap" style="width: 25%;">{{ .Example }}</td>
                                     <td class="nowrap" style="width: 25%;">{{ .Regex }}</td>
-                                    <td>{{ .Description }}</td>
+                                    <td class="nowrap">{{ .Description }}</td>
                                 </tr>
                             {{ end }}
                             </tbody>
