--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -183,7 +183,7 @@
                                                         <tr>
                                                             <td>{{ .Metric.String }}</td>
                                                             <td data-toggle="tooltip" data-placement="top" title="Players: {{ .GetPlayers }} (Top {{ .Percentile }}%)">{{ .Rank }}</td>
-                                                            <td>{{ .List }}</td>
+                                                            <td class="nowrap">{{ .List }}</td>
                                                         </tr>
                                                     {{ end }}
                                                 </table>
