Upgrade recent chatbot commands

--- a/cmd/webserver/assets/sass/_tables.scss
+++ b/cmd/webserver/assets/sass/_tables.scss
@@ -163,6 +163,10 @@ table.table {
         }
     }
 
+    td.thin {
+        width: 1%;
+    }
+
     td.platforms.platforms-align span.space {
         display: inline-block;
         width: .875em;
