--- a/cmd/webserver/templates/chat_bot.gohtml
+++ b/cmd/webserver/templates/chat_bot.gohtml
@@ -21,8 +21,8 @@
 
                     <h5>{{ (index $value 0).Type }} Commands </h5>
 
-                    <div class="table-responsive mb-4">
-                        <table class="table table-hover table-striped table-datatable mb-3" data-ordering="false">
+                    <div class="table-responsive commands-table mb-4">
+                        <table class="table table-hover table-striped table-datatable" data-ordering="false">
                             <thead class="thead-light">
                             <tr>
                                 <th scope="col">Example</th>
@@ -57,7 +57,6 @@
                 <div class="table-responsive">
                     <table id="recent" class="table table-hover table-striped mb-0">
                         <tbody>
-
                         </tbody>
                     </table>
                 </div>
