Add info panel to chatbot

--- a/cmd/webserver/templates/chat_bot.gohtml
+++ b/cmd/webserver/templates/chat_bot.gohtml
@@ -16,6 +16,12 @@
 
         <div class="card mb-4">
             <div class="card-body">
+                <p class="mb-0">All commands can start with a full stop <code>.</code> or an exclamation point <code>!</code></p>
+            </div>
+        </div>
+
+        <div class="card mb-4">
+            <div class="card-body">
 
                 {{ range $key, $value := .Commands }}
 
