Put stats dropdown back

--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -160,8 +160,22 @@
                         <a class="nav-link" href="/badges">Badges</a>
                     </li>
 
-                    <li class="nav-item {{if .IsStatsPage }}active{{end}}">
-                        <a class="nav-link" href="/stats">Stats</a>
+                    <li class="nav-item dropdown {{if .IsStatsPage }}active{{end}}">
+                        <a class="nav-link dropdown-toggle d-lg-none" href="#" data-toggle="dropdown">Stats</a>
+                        <a class="nav-link dropdown-toggle d-none d-lg-block" href="/stats" data-toggle="dropdown">Stats</a>
+                        <div class="dropdown-menu">
+
+                            <a class="dropdown-item" href="/stats">Stats</a>
+
+                            <div class="dropdown-divider"></div>
+
+                            <a class="dropdown-item" href="/tags">Tags</a>
+                            <a class="dropdown-item" href="/genres">Genres</a>
+                            <a class="dropdown-item" href="/categories">Categories</a>
+                            <a class="dropdown-item" href="/publishers">Publishers</a>
+                            <a class="dropdown-item" href="/developers">Developers</a>
+
+                        </div>
                     </li>
 
                     <li class="nav-item {{if startsWith .Path "/news" }}active{{end}}">
