Put size debug back

--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -95,15 +95,15 @@
     <img src="/assets/img/sa-500x500.png" alt="Loading">
 </div>
 
-{{/*{{ if eq .Env "local" }}*/}}
-{{/*    <div id="sizes">*/}}
-{{/*        <div class="d-block d-sm-none">XS</div>*/}}
-{{/*        <div class="d-none d-sm-block d-md-none">SM</div>*/}}
-{{/*        <div class="d-none d-md-block d-lg-none">MD</div>*/}}
-{{/*        <div class="d-none d-lg-block d-xl-none">LG</div>*/}}
-{{/*        <div class="d-none d-xl-block">XL</div>*/}}
-{{/*    </div>*/}}
-{{/*{{ end }}*/}}
+{{ if eq .Env "local" }}
+    <div id="sizes">
+        <div class="d-block d-sm-none">XS</div>
+        <div class="d-none d-sm-block d-md-none">SM</div>
+        <div class="d-none d-md-block d-lg-none">MD</div>
+        <div class="d-none d-lg-block d-xl-none">LG</div>
+        <div class="d-none d-xl-block">XL</div>
+    </div>
+{{ end }}
 
 <header>
 
