--- a/cmd/webserver/templates/info.gohtml
+++ b/cmd/webserver/templates/info.gohtml
@@ -72,6 +72,11 @@
                             <li>Sales are updated when the app on sale is updated.</li>
                         </ul>
 
+                        <h5>Stats</h5>
+                        <ul>
+                            <li>Tag, Genre, Category, Publisher & Developer pages are all updated at midnight.</li>
+                        </ul>
+
                         <!--
                         <h5>Where else can I find Game DB?</h5>
                         <div class="clearfix mb-2">
