--- a/cmd/webserver/templates/genres.gohtml
+++ b/cmd/webserver/templates/genres.gohtml
@@ -8,7 +8,7 @@
                 <div class="col-sm-12 col-lg-6">
 
                     <h1><i class="fas fa-film"></i> Genres</h1>
-                    <p class="lead">{{ comma (len .Genres) }} Genres updated <span data-livestamp="{{ .Date }}"></span>.</p>
+                    <p class="lead">{{ comma (len .Genres) }} Genres.</p>
 
                 </div>
                 <div class="col-sm-12 col-lg-6">
