--- a/cmd/webserver/templates/publishers.gohtml
+++ b/cmd/webserver/templates/publishers.gohtml
@@ -8,7 +8,7 @@
                 <div class="col-sm-12 col-lg-6">
 
                     <h1><i class="fas fa-star"></i> Publishers</h1>
-                    <p class="lead">{{ comma (len .Publishers) }} Publishers updated <span data-livestamp="{{ .Date }}"></span>.</p>
+                    <p class="lead">{{ comma (len .Publishers) }} Publishers.</p>
 
                 </div>
                 <div class="col-sm-12 col-lg-6">
